Fix incomplete flex-wrap code in subline class

--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,7 @@ body {
     font-weight: bold;
 }
 .subline {
-    display:flex;
-    flex-wrao;
+    display: flex;
 }
 
 .image_header {
